Sat Jul 5 2003 Lachlan Andrew <lha@users.sourceforge.net>

	* htcommon/defaults.cc: Disable cache flushing to avoid "page leak".

Tue Jun 24 2003 Neal Richter <nearl@rightnow.com>

    * Update Copyright Notices in code & documentation to 2003

    * Changed License Notice GPL -> LGPL License change (Decided by HtDig
    Board & Membership October 2002

Mon Jun 23 2003 Neal Richter <nearl@rightnow.com>

    * Raft of changes.  Most todo with Native Win32 support

    * TODO: ExternalTranport & ExternalParser are effectively dissabled with
      #ifdefs for Native WIN32

    * remove global CDB___mp_dirty_level variable and subsitute functions to set/get variable

    * Added local copies of GNU LGPL regex, POSIX-like dirent routines, getopt
      library and filecopy routines - mainly for Native WIN32 support

    * improve IsValidURL with return codes (htdig/Retriever.cc)

    * lots of improvements/new-features to libhtdig

Sun Jun 22 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/mp_cmpr.c (CDB___memp_cmpr_open):
	  Make weak compression database standalone to avoid recursion
	  This *should* fix all of the recent problems with dirty cache etc.

	* test/search.cc:  Don't take sizeof zero sized array

Fri Jun 20 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* configure,aclocal.m4,acinclude.m4: --with-ssl set CPPFLAGS, not CFLAGS

Fri Jun 20 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/configure: Hack which should allow  select  to be detected on HP/UX

	* db/db.c: Replace  HAVE_ZLIB  with  HAVE_LIBZ  (as set by configure)

	* htword/wordKey.cc: More descriptive error message

	  (Changes to compile with Sun's C++)
	* htnet/{HtCookie.cc,HtFTP.cc,Transport.cc}:
	  Assign substring of const string to const pointer.
	* htsearch/ResultMatch.h:
	  Allow use of  SortType  in ResultMatch::setSortType()
	* test/search.cc: Don't take  sizeof(variable size array)
	* htdb/htdb_stat.cc: avoid name clash for global var  internal