@@ -10,7 +10,7 @@
 # or the GNU Library General Public License (LGPL) version 2 or later
 # <http://www.gnu.org/copyleft/lgpl.html>
 #
-# $Id: test_functions.in,v 1.11 2003/06/27 20:28:44 nealr Exp $
+# $Id: test_functions.in,v 1.12 2003/07/05 15:45:46 lha Exp $
 #
 
 if [ "$1" == --stop-apache ]
@@ -18,8 +18,8 @@ then
     if [ -n "$httpd"  -a  -f logs/httpd.pid ]
     then
 	kill -15 `cat logs/httpd.pid`
-        cp /dev/null logs/httpd.pid
 	sleep 2
+        rm -f logs/httpd.pid
     fi
 else
 
@@ -63,12 +63,14 @@ then
       if [ -f logs/httpd.pid ]
       then
 	kill -15 `cat logs/httpd.pid`
-        cp /dev/null logs/httpd.pid
 	sleep 2
+        rm -f logs/httpd.pid
       fi
     fi
-    if ! $httpd -f $testdir/conf/httpd.conf
+    if $httpd -f $testdir/conf/httpd.conf
     then
+        sleep 2
+    else
         echo
         echo "****Could not start apache. This test may fail, but that is not ht://Dig's fault"
         echo
@@ -106,8 +108,8 @@ fail() {
     if [ -n "$httpd"  -a  -f logs/httpd.pid ]
     then
       kill -15 `cat logs/httpd.pid`
-      cp /dev/null logs/httpd.pid
       sleep 2
+      rm -f logs/httpd.pid
     fi
     exit 1
 }
